--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@rails/webpacker": "^4.2.0",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
+    "lightgallery": "^1.6.12",
     "popper.js": "^1.16.0",
     "typed.js": "^2.0.11"
   },
